Add space in CSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <div class="max-length pad-t pad-b">
+  <div class="container max-length pad-t pad-b">
     <form class="island" method="POST" action="https://formspree.io/fuen0015@algonquinlive.com">
       <h1 class="border not-bold">Want to go to Mars?</h1>
       <div>
